[Ausbildung] Multithreading: Performancemessung (Data Sharing)